# korobok

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: krb.h
test/: CMakeLists.txt  CreateSource.cmake  krb_test_source.krb.in
test/src/: main.cpp
